Overhauled the registration process for new users again

--- a/registration/templates/qualify_step0.html
+++ b/registration/templates/qualify_step0.html
@@ -8,9 +8,28 @@
 
   <p>Although other web services will give anyone an account in under a minute, eConvenor works differently.</p>
   
-  <p>eConvenor is only for progressive groups who are opposed to oppression, so you must complete an eligibility self-check and read the terms of use before signing up.</p> 
+  <p>eConvenor is exclusively for progressive groups, so you must complete an eligibility check and read the terms and conditions before registering an account.</p>
   
-  <p>It takes about 10 minutes to do the eligibility check and read the terms of use.</p>
+   <p>eConvenor is a service for:</p>
+     <ul>
+       <li>
+         <i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
+         grassroots campaigns</li>
+       <li>
+         <i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
+         non-government organisations (NGOs)</li>
+       <li>
+         <i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
+         progressive service providers</li>
+       <li>
+         <i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
+         co-operatives</li>
+       <li>
+         <i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
+         activist groups and the like.</li>
+     </ul>
+      
+  <p>It takes about 10 minutes to do the eligibility check and read the terms and conditions.</p>
 
   <p>We're excited to offer groups which share our vision of a better world a tool to help them be more effective.</p>
   
