--- a/registration/templates/qualify_step6.html
+++ b/registration/templates/qualify_step6.html
@@ -4,28 +4,77 @@
 
 {% block heading %}
 
-  Success!&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;
-  Step 6 of 10
+  What eConvenor expects from you&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;
+  Step 6 of 9
 
 {% endblock heading %}
 
 {% block content %}
 
-<p class="lead"><span class="red">Your group is eligible for an account</span></p>
+<p class="lead">We expect that you will:</p>
+  <ul>
+    <li>
+      <i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
+      use your account only for groups which are progressive, committed to social justice and not-for-profit</li>
+    <li>
+      <i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
+      contribute financially if your group should do so</li>
+    <li>
+      <i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
+      do your best to use strong passwords</li>
+    <li>
+      <i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
+      maintain the security of your passwords and login details and</li>
+    <li>
+      <i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
+      abide by these terms and conditions</li>
+  </ul>
 
-<p>Your group meets eConvenor's eligibility criteria! We'd love it if you would set up an account and use the service.</p>
+<p class="lead">We hope that you will:</p>
+  <ul>
+    <li>
+      <i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
+      spread the word about eConvenor</li>
+    <li>
+      <i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
+      tell us when something isn't working, whether it's just broken, or an accessibility problem and</li>
+    <li>
+      <i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
+      raise any concerns you have with us via email</li>
+    <li>
+  </ul>
 
-<p> The final few steps take you through our terms of service. Once you have read and agreed to them, you can set up your account.</p>
+<p class="lead">We expect that you will not:</p>
+  <ul>
+    <li>
+      <i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
+      use your account for groups which are government agencies, authorities or departments; or groups which aim to spread or impose religion</li>
+    <li>
+      <i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
+      use eConvenor to progress right-wing, socially conservative, economically conservative, oppressive or otherwise harmful agendas or</li>
+    <li>
+      <i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
+      lie to us in your application to use eConvenor</li>
+  </ul>
 
-<p class="lead"><span class="red">eConvenor is currently a beta release</span></p>
-
-<p> eConvenor is a brand new service and is currently what's known as a "beta release". This means that it is usable and includes its basic initial feature-set, but that the software it runs on also contains some bugs.</p>
-
-<p>As the bug fixing process takes some time, and eConvenor is working well enough to be useful right now, it is being released in beta so that the activist community can start benefiting from it sooner rather than later.</p>
-
-<p>If you encounter unexpected behaviour while using eConvenor, please be patient and know that we are working flat out to find and fix bugs, and improve the service. You can help us by submitting bug reports through the "Help" menu when using eConvenor, or by writing code for eConvenor if you know how.<p> 
-
-
+<p class="lead">If you break the rules, we may:</p>
+  <ul>
+    <li>
+      <i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
+      send you a warning</li>
+    <li>
+      <i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
+      lock your account until the matter is resolved</li>
+    <li>
+      <i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
+      refuse any further access to your account and stored data (in serious cases)</li>
+    <li>
+      <i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
+      delete your data (in serious cases) and/or</li>
+    <li>
+      <i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
+      block your and your group from using eConvenor</li>
+  </ul>
 
   <div class="pull-right">
     <a href="{% url 'qualify' 'step5' %}" class="btn btn-default">
