--- a/registration/templates/qualify_step7.html
+++ b/registration/templates/qualify_step7.html
@@ -4,77 +4,65 @@
 
 {% block heading %}
 
-  What eConvenor expects from you&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;
-  Step 7 of 10
+  What you can expect from eConvenor&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;
+  Step 7 of 9
 
 {% endblock heading %}
 
 {% block content %}
 
-<p class="lead">We expect that you will:</p>
-  <ul>
-    <li>
-      <i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
-      use eConvenor to help you make the world better, not worse</li>
-    <li>
-      <i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
-      contribute financially if your group should do so (see who should pay to use eConvenor)</li>
-    <li>
-      <i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
-      do your best to use secure passwords</li>
-    <li>
-      <i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
-      maintain the security of your passwords and login details and</li>
-    <li>
-      <i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
-      abide by these terms and conditions</li>
-  </ul>
 
-<p class="lead">We expect that you will not:</p>
+<p class="lead">eConvenor promises not to:</p>
   <ul>
     <li>
       <i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
-      use eConvenor to progress right-wing, socially or economically conservative, oppressive or otherwise harmful purposes</li>
+      give your data to third parties unless compelled by law</li>
     <li>
       <i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
-      lie to us in your application to use eConvenor or</li>
+      sell or trade your contact details or other information or</li>
     <li>
       <i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
-      store racist, sexist, ableist, homophobic or otherwise harmful language or images on eConvenor</li>
+      ask you for unnecessary private or personal information.</li>
     <li>
   </ul>
 
-<p class="lead">We hope that you will:</p>
+<p class="lead">eConvenor promises to:</p>
   <ul>
     <li>
       <i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
-      spread the word to other groups who meet the criteria for using eConvenor</li>
+      act ethically in building and maintaining eConvenor</li>
     <li>
       <i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
-      tell us when something isn't working, whether it's just broken, or an accessibility problem and</li>
+      vigorously resist all demands for information from third parties up until the point where we are compelled to comply with a lawful demand and</li>
     <li>
       <i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
-      raise any concerns you have with us via email</li>
-    <li>
+      tell you when eConvenor's terms and conditions change.</li>
   </ul>
 
-<p class="lead">If you break the rules, we may:</p>
+<p class="lead">eConvenor will try as hard as possible to:</p>
   <ul>
     <li>
       <i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
-      send your group a warning using either your dashboard or email addresses stored in eConvenor</li>
+      keep your data secure</li>
     <li>
       <i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
-      lock your account until the matter is resolved</li>
+      make eConvenor accessible to people with disabilities and</li>
     <li>
       <i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
-      refuse any further access to your account and stored data (in serious cases)</li>
+      provide uninterrupted access to the service.</li>
+  </ul>
+
+<p class="lead">If you raise a concern with eConvenor we will:</p>
+  <ul>
     <li>
       <i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
-      delete your data (in serious cases) and/or</li>
+      respond in reasonable timeframe considering that we are a tiny, volunteer organisation</li>
     <li>
       <i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
-      block your group, IP address, email addresses etc from using eConvenor in the future</li>
+      examine our own conduct in good faith and with an openness to change</li>
+    <li>
+      <i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
+      aim to resolve issues with a will to abolish oppression, recognition of responsibility for misuse of privilege, and a committment to social justice.</li>
   </ul>
 
   <div class="pull-right">
