--- a/registration/templates/qualify_step8.html
+++ b/registration/templates/qualify_step8.html
@@ -4,80 +4,53 @@
 
 {% block heading %}
 
-  What you can expect from eConvenor&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;
-  Step 8 of 10
+  Licence and legal bits&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;
+  Step 8 of 9
 
 {% endblock heading %}
 
 {% block content %}
 
-<p class="lead">eConvenor promises to:</p>
+<p class="lead">It is okay for you to:</p>
   <ul>
     <li>
       <i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
-      act ethically in our work building and maintaining eConvenor</li>
+      use, modify or reproduce snippets of code without attribution</li>
     <li>
       <i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
-      use your data only for the purpose for which we collected it unless we gain your express permission</li>
+      review eConvenor's source code for learning, security or other purposes</li>
     <li>
       <i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
-      collect data only where it assists us to make eConvenor better and more accessible, or allows  us to facilitate your access to eConvenor</li>
-    <li>
-      <i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
-      resist all and any demands for information from governments and other third parties up until the point where we are legally required to comply with a lawful demand from a democratic jurisdiction and</li>
-    <li>
-      <i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
-      tell you if the terms and conditions change the next time you log in</li>
+      contribute to eConvenor's code base</li>
   </ul>
 
-<p class="lead">eConvenor will try as hard as possible to:</p>
+<p class="lead">It is not okay for you to:</p>
   <ul>
     <li>
       <i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
-      keep your data secure</li>
+      sell access to eConvenor</li>
     <li>
       <i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
-      make eConvenor accessible</li>
+      sell copies of eConvenor</li>
     <li>
       <i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
-      resist all and any demands for information from governments and other third parties</li>
+      use eConvenor's source code to create and sell a similar service or</li>
     <li>
       <i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
-      ensure you can access your groups meeting, tasks, and participants data at any time (unless you break the rules) and</li>
-    <li>
-      <i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
-      ensure you can access all of your data in a reasonable timeframe on request (unless you break the rules).</li>
+      use eConvenor's name or logo without eConvenor's permission</li>
   </ul>
 
-<p class="lead">eConvenor will not:</p>
-  <ul>
-    <li>
-      <i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
-      give your data to third persons unless compelled by law</li>
-    <li>
-      <i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
-      sell or trade your contact details or other information or</li>
-    <li>
-      <i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
-      ask you for unnecessary private or personal information.</li>
-    <li>
-  </ul>
+<p class="lead">Updates to eConvenor's terms and conditions</p>
 
-<p class="lead">If you raise a concern with eConvenor we will:</p>
-  <ul>
-    <li>
-      <i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
-      aim to respond in reasonable timeframe (considering we are a tiny volunteer organisation)</li>
-    <li>
-      <i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
-      examine our own conduct in good faith and with an openness to change</li>
-    <li>
-      <i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
-      aim to be fair in determining issues between users and</li>
-    <li>
-      <i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
-      apply our ethics in resolving the issue, including a will to abolish oppression, recognition of responsibility for misuse of privilege, and social equity and justice.</li>
-  </ul>
+<p>eConvenor's terms and conditions are likely to change from time to time. We will tell you when they do. By continuing to use eConvenor after the terms and conditions change, you agree to the new terms and conditions.</p>
+
+<p class="lead">Jurisdiction</p>
+
+<p>eConvenor is an Australian organisation, and the terms and conditions are governed in all respects by the laws of Australia. Any actions arising from the terms and conditions or in any way associated with eConvenor may be brought only in Australia.</p>
+
+<p class="lead">Liability</p>
+
+<p>The service is provided "as is", without warranty of any kind, express or implied, including but not limited to the warranties of merchantability, fitness for a particular purpose and non-infringement. In no event shall the authors or copyright holders be liable for any claim, damages or other liability, whether in an action of contract, tort or otherwise, arising from, out of or in connection with the service or the use or other dealings in the service.</p>
 
   <div class="pull-right">
     <a href="{% url 'qualify' 'step7' %}" class="btn btn-default">
