--- a/registration/templates/registration_base.html
+++ b/registration/templates/registration_base.html
@@ -67,7 +67,7 @@
                   {% elif section == 'eligibility' %}
                     Eligibility check                  
                   {% elif section == 'terms' %}
-                    Terms of use
+                    Terms and conditions
                   {% elif section == 'complete' %}
                     Complete!
                   {% endif %}
