--- a/registration/templates/qualify_step3.html
+++ b/registration/templates/qualify_step3.html
@@ -4,72 +4,42 @@
 
 {% block heading %}
 
-  Disqualification criteria&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;
-  Step 3 of 10
+  Contributing to eConvenor&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;
+  Step 3 of 9
 
 {% endblock heading %}
 
 {% block content %}
 
-  <p class="lead">Does your group fit into one or more of these categories?</p>
+  <p class="lead">eConvenor is free for most groups because it's built by activists, for activists. However, groups which can afford to contribute are expected to.</p>
 
-  <ul>
-    <li>
-      <i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
-      The group operates to make a profit</li>
-    <li>
-      <i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
-      The group is a government agency, authority or department</li>
-    <li>
-      <i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
-      The group is, or is a part of, a major political party</li>
-    <li>
-      <i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
-      The group aims to spread or impose religion</li>
-    <li>
-  </ul>
+  <p class="lead"><i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
+Most groups</p>
 
-<p class="lead">A note for religious groups</p>
+  <p>Does your group have no budget or a tiny budget? eConvenor was built for you! You can use eConvenor completely free. No obligation, no worries.</p>
 
-<p>We see a difference between groups whose purpose is to spread or impose religion and groups motivated to work against oppression by their religious belief.</p>
+  <p class="lead"><i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
+Groups which can afford to contribute</p>
 
-<p>If your group is motivated by religious belief to work against oppression, but doesn't seek to spread that belief to others, we would love you to use eConvenor.</p>
+  <p>Groups who feel that they can afford to make a donation in return for using eConvenor should do so once each year.</p>
 
-<p>Examples of religious groups welcome to use eConvenor include: a feminist Muslim women's group; a Jewish anti-war group; a Buddhist vegetarian food co-op and a Christian group advocating for refugee rights.</p>
+  <p class="lead"><i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
+Political parties and trade unions</p>
+
+  <p>Political parties and trade unions in high income countries (who are progressive and committed to social justice) can use eConvenor for a fee.</p>
+
+  <p>We rely on your honesty. Donations and fees help eConvenor improve.</p>
 
   <div class="pull-right">
     <a href="{% url 'qualify' 'step2' %}" class="btn btn-default">
       <i class="fa fa-arrow-circle-left fa-lg fa-fw"></i>&nbsp;
       Back
     </a>
-    <button type="button" class="btn btn-primary" id="exit_button">
-      <i class="fa fa-check-circle fa-lg fa-fw"></i>&nbsp;
-      Yes
-    </button>
     <a href="{% url 'qualify' 'step4' %}" class="btn btn-primary">
-      <i class="fa fa-times-circle fa-lg fa-fw"></i>&nbsp;
-      No
+      <i class="fa fa-check-circle fa-lg fa-fw"></i>&nbsp;
+      I understand
     </a>
   </div>
-
-  <div class="modal-data" id="exit_modal_title">
-    <i class="fa fa-times-circle fa-lg"></i>&nbsp;
-    You are not eligible for an eConvenor account
-  </div>
-  <div class="modal-data" id="exit_modal_body">
-    <p>Fitting one of more of these categories means that you cannot set up an eConvenor account.<p>
-  </div>
-  <div class="modal-data" id="exit_modal_button">
-    <i class="fa fa-arrow-circle-right fa-lg fa-fw"></i>&nbsp;
-    Exit eligibility check
-  </div>
-  <div class="modal-data" id="exit_modal_button_target">
-    {% url 'index' %}
-  </div>
-
-
-
-
        
 {% endblock content %}
 
