--- a/registration/templates/qualify_step4.html
+++ b/registration/templates/qualify_step4.html
@@ -4,42 +4,65 @@
 
 {% block heading %}
 
-  Contributing to eConvenor&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;
-  Step 4 of 10
+  Unions and political parties&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;
+  Step 4 of 9
 
 {% endblock heading %}
 
 {% block content %}
 
-  <p class="lead">eConvenor is free for most groups because it's built by activists, for activists. However, groups which can afford to contribute are expected to.</p>
+  <p class="lead">Is your group a political party or trade union in a high-income, reasonably democratic country?</p>
+  
+  <p>If it is, you must pay a fee to use eConvenor. This will help us provide the service to less well-funded groups for free. Click the "Yes" button below.
 
-  <p class="lead"><i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
-Most groups</p>
 
-  <p>Does your group have no budget or a tiny budget? eConvenor was built for you! You can use eConvenor completely free. No obligation, no worries.</p>
+  <p class="lead">A note for unions and political parties in lower-income and less democratic countries</p>
 
-  <p class="lead"><i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
-Groups which can afford to contribute</p>
-
-  <p>Groups who feel that they can afford to make a donation in return for using eConvenor should do so once each year.</p>
-
-  <p class="lead"><i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
-Political parties and trade unions</p>
-
-  <p>Political parties and trade unions in high income countries (who are progressive and committed to social justice) can use eConvenor for a fee.</p>
-
-  <p>We rely on your honesty. Donations and fees help eConvenor improve.</p>
+  <p>We understand that you won't have access to as many resources as similar organisations in high-income and/or more democratic countries, so we'd love you to to use eConvenor for free. Click the "No" button below to continue.
 
   <div class="pull-right">
     <a href="{% url 'qualify' 'step3' %}" class="btn btn-default">
       <i class="fa fa-arrow-circle-left fa-lg fa-fw"></i>&nbsp;
       Back
     </a>
-    <a href="{% url 'qualify' 'step5' %}" class="btn btn-primary">
+    <button type="button" class="btn btn-primary" id="exit_button">
       <i class="fa fa-check-circle fa-lg fa-fw"></i>&nbsp;
-      I understand
+      Yes
+    </button>
+    <a href="{% url 'qualify' 'step5' %}" class="btn btn-primary">
+      <i class="fa fa-times-circle fa-lg fa-fw"></i>&nbsp;
+      No
     </a>
   </div>
+  
+  <div class="modal-data" id="exit_modal_title">
+    <i class="fa fa-star fa-lg"></i>&nbsp;
+    Contact eConvenor
+  </div>
+  <div class="modal-data" id="exit_modal_body">
+    <p>As a union or political party in a high-income, reasonably democratic country, you must pay a fee to use eConvenor.</p>
+    <p>Click the "Email eConvenor" button below, or email <a href="mailto:fees@econvenor.org?subject=Fee+enquiry">fees@econvenor.org</a> and include this information so that your annual fee can be calculated:</p>
+    <ul>
+      <li>
+        <i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
+        The country you operate in</li>
+      <li>
+        <i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
+        The number of participants in the group which will be using eConvenor</li>
+      <li>
+        <i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
+        The address of your website</li>
+    </ul>    
+    <p>Do not continue with this eligibility check. We will set up your account once your fee is paid.</p>
+  </div>
+  <div class="modal-data" id="exit_modal_button">
+    <i class="fa fa-envelope fa-lg fa-fw"></i>&nbsp;
+    Email eConvenor
+  </div>
+  <div class="modal-data" id="exit_modal_button_target">
+    mailto:fees@econvenor.org?subject=Fee+enquiry
+  </div>
+
        
 {% endblock content %}
 
