--- a/registration/templates/registration_base.html
+++ b/registration/templates/registration_base.html
@@ -76,7 +76,7 @@
                     <i class="fa fa-circle fa-stack-2x white"></i>
                     <i class="fa fa-flash fa-stack-1x red"></i>
                   </span>&nbsp;
-                  Register for an account
+                  Register an account
                 {% endif %}
               </h1>
             </div>
