--- a/econvenor/templates/app_base.html
+++ b/econvenor/templates/app_base.html
@@ -37,7 +37,7 @@
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href={% url 'dashboard' %}>
-            eConvener
+            eConvenor
           </a>
         </div><!-- /.navbar-header -->
 
