--- a/registration/templates/qualify_step6.html
+++ b/registration/templates/qualify_step6.html
@@ -73,7 +73,7 @@
       delete your data (in serious cases) and/or</li>
     <li>
       <i class="fa fa-arrow-circle-right fa-lg fa-fw red"></i>&nbsp;
-      block your and your group from using eConvenor</li>
+      block you and your group from using eConvenor (in serious cases)</li>
   </ul>
 
   <div class="pull-right">
