--- a/registration/templates/qualify_step2.html
+++ b/registration/templates/qualify_step2.html
@@ -29,7 +29,7 @@
 
 <p>If your group is motivated by religious belief to work against oppression, but doesn't aim to convert people, we would love you to use eConvenor.</p>
 
-<p>Examples of religious groups welcome to use eConvenor include: a feminist Muslim women's group; a Jewish anti-war group; a Buddhist vegetarian food co-op and a Christian group advocating for refugee rights.</p>
+<p>Examples of religious groups welcome to use eConvenor include: a feminist Muslim women's group; a Jewish anti-war group; a Buddhist vegetarian food co-op and a Christian group campaigning for refugee rights.</p>
 
   <div class="pull-right">
     <a href="{% url 'qualify' 'step1' %}" class="btn btn-default">
