--- a/registration/templates/register.html
+++ b/registration/templates/register.html
@@ -10,7 +10,7 @@ Log in details
 
 {% block content %}
 
-    <form role="form" method="POST">
+    <form role="form" method="POST" id="registerform">
       {% csrf_token %}
 
       <div class="form-group">      
@@ -28,13 +28,14 @@ Log in details
         {{ user_form.password1.errors }}
         {{ user_form.password2.errors }}
       </div>
-    </div><!-- /.panel-body -->
+
     <div class="panel-heading">
       <h2>
         Your details
       </h2>
     </div><!-- /.panel-heading -->
-    <div class="panel-body">
+    
+
       <div class="form-group">      
         {{ user_form.username.label_tag }}      
         {{user_form.username|setclass:"form-control" }}
@@ -50,13 +51,13 @@ Log in details
         {{ user_form.last_name|setclass:"form-control" }}
         {{ user_form.last_name.errors }}
       </div>
-    </div><!-- /.panel-body -->
+
     <div class="panel-heading">
       <h2>
         Your group's details
       </h2>
     </div><!-- /.panel-heading -->
-    <div class="panel-body">
+
       <div class="form-group">      
         {{ group_form.name.label_tag }}      
         {{ group_form.name|setclass:"form-control" }}
@@ -90,3 +91,105 @@ Log in details
     </form>       
   
 {% endblock content %}
+
+{% block extrajs %}
+
+<script>
+
+  $(function() {
+  
+    jQuery.validator.addMethod("passwordCheck", function(value, element) {
+      return this.optional(element) || /^(?=.*[a-zA-Z])(?=.*\d)(?=.*\W)[a-zA-Z0-9\S]{8,}$/.test(value);
+    },
+    "Passwords must be least 8 characters long, contain at least one digit and one special character, and have no spaces.");
+
+    jQuery.validator.addMethod("usernameCheck", function(value, element) {
+      return this.optional(element) || /^[\w]+$/.test(value);
+    },
+    "Usernames must be 30 characters or fewer and contain letters, digits and underscores ('_') only.");
+
+    $("#registerform").validate({
+      rules: {
+        email: {
+          required: true,
+          email: true,
+        },
+        password1: {
+          required: true,
+          passwordCheck: true,
+        },
+        password2: {
+          required: true,
+          equalTo: "#id_password1",
+        },
+        username: {
+          required: true,
+          usernameCheck: true,
+        },
+        first_name: {
+          maxlength: 30,
+        },
+        last_name: {
+          maxlength: 30,
+        },
+        name: {
+          required: true,
+          maxlength: 100,
+        },
+        aim: {
+          required: true,
+          maxlength: 200,
+        },
+        focus: {
+          required: true,
+          maxlength: 40,
+        },
+        country: {
+          required: true,
+          maxlength: 40,
+        },
+      },
+      messages: {
+        email: {
+          required: "Please enter your email address. This will be your login.",
+          email: "Please enter a valid email address.",
+        },
+        password1: {
+          required: "Please enter a password.",
+        },
+        password2: {
+          required: "Please enter a password confirmation.",
+          equalTo: "The two passwords you have entered must match exactly.",
+        },
+        username: {
+          required: "Please enter your preferred username.",
+        },
+        first_name: {
+          maxlength: 30,
+        },
+        last_name: {
+          maxlength: 30,
+        },
+        name: {
+          required: "Please enter the name of your group.",
+          maxlength: 100,
+        },
+        aim: {
+          required: "Please enter a brief description of your group's main aim.",
+          maxlength: 200,
+        },
+        focus: {
+          required: "Please enter the main issue your group focuses on.",
+          maxlength: 40,
+        },
+        country: {
+          required: "Please enter the country which your group operates in.",
+          maxlength: 40,
+        },
+      },
+    });
+  })
+  
+</script>
+
+{% endblock extrajs %}
